# transformers-gen-ai

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  requirements_dev.txt
examples/: multi-head-attention.ipynb
modelling/: __init__.py  data.py  lstm.py  rnn.py  text_gen.py  training.py  transformer.py  utils.py
notebooks/: 0_attention_and_transformers.ipynb  1_data_and_dataloaders.ipynb  1_datasets_and_dataloaders.ipynb  2_text_generation_with_rnns.ipynb  3_text_generation_with_transformers.ipynb  4_pre_trained_transformers_for_search.ipynb  4_text_generation_with_transformers_.ipynb  4_text_generation_with_transformers_and_bpe.ipynb  4_transformers_for_search.ipynb  5_pre_trained_transformers_for_sentiment_analysis.ipynb  5_transformers_for_search.ipynb  5_transformers_for_sentiment_analysis.ipynb  6_transformers_for_sentiment_analysis.ipynb
presentation_slides/: Makefile  custom.css  presentation.html
presentation_slides/images/: causal_mask.excalidraw
slides/: Demo.html  Makefile  README.md  custom.css  presentation.html  presentation.md  transformers-and-llms.html  transformers-and-llms.md
slides/images/: attention.excalidraw  paradigm.excalidraw
src/modelling/: data.py  rnn.py  transformer.py  utils.py
tests/: test_data.py
