[project]
name = "modelling"
version = "0.4.0"
authors = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
maintainers = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
description = "Transformers and language modelling from a standing start."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas==2.0.1",
    "portalocker==2.7.0",
    "seaborn==0.12.2",
    "tokenizers==0.13.3",
    "torch==2.0.1",
    "torchtext==0.15.2",
    "tqdm==4.65.0",
    "Unidecode==1.3.6",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "nbqa==1.7.0",
    "pytype==2023.4.27",
    "ruff==0.0.277",
]

[project.urls]
"Homepage" = "https://github.com/AlexIoannides/transformers"
"Bug Tracker" = "https://github.com/AlexIoannides/transformers/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
src = ["src"]
line-length = 89
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.pytype]
inputs = ["src"]
